--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Management_St.Data.Dto.Categories.CategoryDto>
+﻿@model IEnumerable<Management_St.Data.Entity.Category>
 
 @{
     ViewData["Title"] = "Index";
