--- a/Views/Categories/Edit.cshtml
+++ b/Views/Categories/Edit.cshtml
@@ -1,16 +1,16 @@
-﻿@model Management_St.Data.Dto.Categories.CategoryDto
+﻿@model Management_St.Data.Entity.Category
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-<h1>Create</h1>
+<h1>Edit</h1>
 
-<h4>CategoryDto</h4>
+<h4>Category</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -22,6 +22,7 @@
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="CreateTime" class="control-label"></label>
                 <input asp-for="CreateTime" class="form-control" />
@@ -48,7 +49,7 @@
                 <span asp-validation-for="DeletorId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
